--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app">Please wait...</div>
   <script>
     window.$docsify = {
-      name: 'MushroomDAO',
+      name: 'MushroomDAO Docs',
       repo: 'https://github.com/MushroomDAO/mushroom.github.io',
       loadSidebar: true,
       subMaxLevel: 2,
