--- a/mushroom-dao-banner.html
+++ b/mushroom-dao-banner.html
@@ -145,7 +145,7 @@
         ctx.shadowColor = 'rgba(0, 200, 255, 0.7)';
         ctx.shadowBlur = 15;
         
-        ctx.fillText('MushRoomDAO', canvas.width / 2, canvas.height / 2);
+        ctx.fillText('Cooperation Innovation ^_^', canvas.width / 2, canvas.height / 2);
 
         // 重置阴影，以免影响其他元素的绘制
         ctx.shadowBlur = 0;
